package ar.edu.unlp.info.oo1.ej3_mediaPlayer;

public class Audio extends Media{

	public void play () {
		
	}
}
