package ar.edu.unlp.info.oo1.ej3_mediaPlayer;

public abstract class Media {
	
	public abstract void play (); 
}
