package ar.edu.unlp.info.oo1.ej3_mediaPlayer;

public class VideoFile extends Media {
	public void play () {
		
	}
}
