package ar.edu.unlp.info.oo1.ej3_mediaPlayer;

public class VideoStream {

	public void reproduce () {
		
	}
}
